tests/fuse/core/types/sized_int_no_coercion.fuse
// EXPECTED ERROR:
// error: type mismatch: `a` declared as `Int32`, initializer has type `Int`
//   --> sized_int_no_coercion.fuse:18:3
// error: type mismatch: `b` declared as `UInt8`, initializer has type `Int`
//   --> sized_int_no_coercion.fuse:19:3
// error: type mismatch: `c` declared as `Int8`, initializer has type `Int`
//   --> sized_int_no_coercion.fuse:20:3
// error: type mismatch: `d` declared as `UInt32`, initializer has type `Int`
//   --> sized_int_no_coercion.fuse:21:3
// error: type mismatch: `e` declared as `UInt64`, initializer has type `Int`
//   --> sized_int_no_coercion.fuse:22:3

// Int literal infers to Int. Assigning Int to a sized integer type
// must be a type error — no implicit coercion.

@entrypoint
fn main() {
  val a: Int32 = 42
  val b: UInt8 = 255
  val c: Int8 = 1
  val d: UInt32 = 100
  val e: UInt64 = 999
  println(f"{a}")
}
